--- a/templates/add_form.html
+++ b/templates/add_form.html
@@ -5,6 +5,7 @@
     <h2>Добавить заметку</h2>
     <form action="{{ url_for('add_note') }}" method="POST">
         <input type="text", name="new-note">
+        <input type="date", name="new-date">
         <button>Добавить</button>
     </form>
 
