--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,9 @@
 </head>
 <body>
     <div>
-        <a href="{{ url_for('home') }}">Главная</a>
-        <a href="{{ url_for('hello', user_name='аноним') }}">Привет</a>
-        <a href="{{ url_for('add_note_form') }}">Добавить заметку</a>
+        <a href="{{ url_for('home') }}">Главная</a> |
+        <a href="{{ url_for('hello', user_name='аноним') }}">Привет</a> |
+        <a href="{{ url_for('add_note_form') }}">Добавить заметку</a> |
         <a href="{{ url_for('table') }}">Таблица</a>
     </div>
     <hr>
