--- a/templates/table_lst.html
+++ b/templates/table_lst.html
@@ -2,15 +2,19 @@
 
 {% block content %}
 <table border="1">
-    <tr>
-        <th>Заметка</th>
-        <th>Дата</th>
-    </tr>
+    <thead>
+        <th>
+            <td>Заметка</td>
+            <td>Дата</td>
+        </th>
+    </thead>
+    <tbody>
     {% for i, j in nd_lst %}
         <tr>
             <td>{{i}}</td>
             <td>{{j}}</td>
         </tr>
     {% endfor %}
+    </tbody>
 </table>
 {% endblock %}
