--- a/templates/table_lst.html
+++ b/templates/table_lst.html
@@ -3,10 +3,10 @@
 {% block content %}
 <table border="1">
     <thead>
-        <th>
-            <td>Заметка</td>
-            <td>Дата</td>
-        </th>
+        <tr>
+            <th>Заметка</th>
+            <th>Дата</th>
+        </tr>
     </thead>
     <tbody>
     {% for i, j in nd_lst %}
