--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Hello, {{user_name}}!</h2>
+    <h2 class="hello">Hello, {{user_name}}!</h2>
 {% endblock %}
