--- a/static/note.css
+++ b/static/note.css
@@ -35,7 +35,7 @@
 table {
     width: 50%;
     font-size: 18px;
-    background: #5c5c5c;
+    background: lightgray;
 }
 
 tr {
@@ -46,7 +46,7 @@ tr {
 }
 
 tr:hover {
-    opacity: 0.5;
+    opacity: 0.7;
 }
 
 .hello {
